--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Build a Blog</h1>
+<h1>Home</h1>
 <div class="blogs">
     {% if users|length == 0 %}
     <p>No one's signed up yet. <a href="/signup">Why don't you be the first!</a></p>
