--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
             <li><a href="/newpost">Write a Post</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/logout">Logout</a></li>
+            <li><a href="/singleUser">Single User</a></li>
         </ul>
     </div>
     <div>
