--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Please log in to post your blog!</h1>
+<h1>Please log in to post into your blog!</h1>
 <p>If you don't have an account, you may <a href="/signup">sign up</a> here.</p>
 
 <form action="/login" method="POST">
