--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Build a Blog</h1>
+<h1>Blog</h1>
 <div class="blogs">
     {% if blog|length == 0 %}
     <p>No posts yet! <a href="/newpost">Write one!</a></p>
